--- a/gobotany/static/sass/_common.scss
+++ b/gobotany/static/sass/_common.scss
@@ -9,44 +9,44 @@
 
 @font-face {
     font-family: ScalaSans;
-    src: url(http://newfs.s3.amazonaws.com/fonts/ScalaSansWeb.woff) format("woff");
+    src: url(//newfs.s3.amazonaws.com/fonts/ScalaSansWeb.woff) format("woff");
 }
 @font-face {
     font-family: ScalaSans;
     font-weight: bold;
-    src: url(http://newfs.s3.amazonaws.com/fonts/ScalaSansWeb-Bold.woff) format("woff");
+    src: url(//newfs.s3.amazonaws.com/fonts/ScalaSansWeb-Bold.woff) format("woff");
 }
 @font-face {
     font-family: ScalaSans;
     font-style: italic;
-    src: url(http://newfs.s3.amazonaws.com/fonts/ScalaSansWeb-Ita.woff) format("woff");
+    src: url(//newfs.s3.amazonaws.com/fonts/ScalaSansWeb-Ita.woff) format("woff");
 }
 @font-face {
     font-family: ScalaSans;
     font-style: italic;
     font-weight: bold;
-    src: url(http://newfs.s3.amazonaws.com/fonts/ScalaSansWeb-BoldIta.woff) format("woff");
+    src: url(//newfs.s3.amazonaws.com/fonts/ScalaSansWeb-BoldIta.woff) format("woff");
 }
 
 @font-face {
     font-family: ScalaSansSmallCaps;
-    src: url(http://newfs.s3.amazonaws.com/fonts/ScalaSansScWeb.woff) format("woff");
+    src: url(//newfs.s3.amazonaws.com/fonts/ScalaSansScWeb.woff) format("woff");
 }
 @font-face {
     font-family: ScalaSansSmallCaps;
     font-weight: bold;
-    src: url(http://newfs.s3.amazonaws.com/fonts/ScalaSansScWeb-Bold.woff) format("woff");
+    src: url(//newfs.s3.amazonaws.com/fonts/ScalaSansScWeb-Bold.woff) format("woff");
 }
 @font-face {
     font-family: ScalaSansSmallCaps;
     font-style: italic;
-    src: url(http://newfs.s3.amazonaws.com/fonts/ScalaSansScWeb-Ita.woff) format("woff");
+    src: url(//newfs.s3.amazonaws.com/fonts/ScalaSansScWeb-Ita.woff) format("woff");
 }
 @font-face {
     font-family: ScalaSansSmallCaps;
     font-style: italic;
     font-weight: bold;
-    src: url(http://newfs.s3.amazonaws.com/fonts/ScalaSansScWeb-BoldIta.woff) format("woff");
+    src: url(//newfs.s3.amazonaws.com/fonts/ScalaSansScWeb-BoldIta.woff) format("woff");
 }
 
 $headings-font: "Trebuchet MS", Helvetica, Arial, "Lucida Sans Unicode", sans-serif;
