Swapped PlantShare placeholder with actual url

--- a/gobotany/site/templates/gobotany/_home_body_content.html
+++ b/gobotany/site/templates/gobotany/_home_body_content.html
@@ -32,7 +32,7 @@
                 discoveries, get help identifying plants, make maps, and
                 develop checklists of plants for particular sites you are
                 exploring.</p>
-                <a class="orange-button caps" href="{% url 'plantshare-placeholder' %}">Learn More</a>
+                <a class="orange-button caps" href="{% url 'ps-main' %}">Learn More</a>
             </div>
             <div class="three-col">
                 <h3>Advanced ID Tools</h3>
