--- a/gobotany/site/templates/gobotany/_about_main_content.html
+++ b/gobotany/site/templates/gobotany/_about_main_content.html
@@ -61,7 +61,7 @@
             Foundation</a> to create customized floras, educational displays,
         and teaching tools!</li>
         <li>Share your ideas with other educators using 
-        <a href="{% url 'plantshare-placeholder' %}">PlantShare</a> and posting
+        <a href="{% url 'ps-main' %}">PlantShare</a> and posting
         to our <a href="{% url 'site-teaching' %}">Teaching</a> page.</li>
         <li>During 2012-2013, New England Wild Flower Society will offer free 
         training for educators throughout New England on how to use Go
