--- a/gobotany/plantshare/templates/sighting.html
+++ b/gobotany/plantshare/templates/sighting.html
@@ -55,7 +55,7 @@
     {% for photo in sighting.photos.all %}
         <li><img src="{{ photo.image.url }}" /></li>
     {% empty %}
-        <li>There are no photos of this sighting.</li>
+        <li>There are no photos available yet for this sighting.</li>
     {% endfor %}
     </ul>
 </div>
