--- a/gobotany/static/sass/_site-media-queries.scss
+++ b/gobotany/static/sass/_site-media-queries.scss
@@ -14,6 +14,9 @@ $search-suggest-menu-top: 83px;
 @mixin nav-current-section {
     background-color: $smallscreen-current-section-color;
     color: #000;
+    &::after {
+        border-color: #666;
+    }
 }
 
 /* Portrait-orientation styles */
@@ -260,11 +263,19 @@ $search-suggest-menu-top: 83px;
                         text-decoration: none;
                         &[href] {
                             color: #fff;
-                            &:after {
-                                content: " >";
-                                font-weight: bold;
+                            &::after {
+                                border-color: #ccc;
+                                border-style: solid;
+                                border-width: 3px 3px 0 0;
+                                content: " \a0";
+                                display: inline-block;
+                                height: 6px;
                                 position: absolute;
                                 right: 14px;
+                                top: 16px;
+                                vertical-align: middle;
+                                width: 6px;
+                                @include rotate(45deg);
                             }
                         }
                     }
