Fix Post Sighting button text since image button was replaced.

--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -76,5 +76,5 @@
                 value="Save" alt="Save Changes">
         {% else %}
             <input type="submit" class="post-sighting-btn orange-button
-            caps disabled" disabled alt="Post a Sighting">
+            caps disabled" disabled value="Post" alt="Post a Sighting">
         {% endif %}
