Restrict sightings for plant names that do not match the database.
For now, unknown plants get flagged and restricted from public visibility.
Upon review by a botanist, if the plant name is corrected or a new plant
is added to the database, the user will be able to set the sighting to
public. (The original request of hiding such sightings until approval
will take some extra work.) (#526)

--- a/gobotany/plantshare/templates/_sighting_form.html
+++ b/gobotany/plantshare/templates/_sighting_form.html
@@ -9,7 +9,7 @@
             (required)</label>
         {{ form.identification }}
         <p class="restricted name hidden">
-            Rare plant. Only you and staff will see this sighting.
+            Restricted: only you and staff will see this sighting.
         </p>
 
         {{ form.notes.errors }}
@@ -65,7 +65,7 @@
         <div class="visibility">
             <p class="label">Visibility</p>
             <p>{{ form.visibility }}</p>
-            <p class="restricted hidden">Rare plant. Only you and
+            <p class="restricted hidden">Restricted: only you and
             staff will see this sighting.</p>
         </div>
         {{ form.flagged.as_hidden }}
