--- a/gobotany/static/sass/_plantshare.scss
+++ b/gobotany/static/sass/_plantshare.scss
@@ -552,6 +552,9 @@ body.plantshare {
         fieldset {
             margin-bottom: 10px;
         }
+        #id_location_notes {
+            height: 113px;
+        }
         .visibility {
             clear: left;
             margin-bottom: 50px;
