--- a/gobotany/mapping/templates/_location_map.html
+++ b/gobotany/mapping/templates/_location_map.html
@@ -1,3 +1,3 @@
 <img id="{{ id }}" class="map" data-type="location" 
-    src="//maps.googleapis.com/maps/api/staticmap?center={{ location }}&amp;size={{ width_px }}x{{ height_px }}&amp;zoom={{ zoom }}&amp;markers=size:small%7C{{ location }}&amp;sensor=false"
+    src="//maps.googleapis.com/maps/api/staticmap?center={{ location }}&amp;size={{ width_px }}x{{ height_px }}&amp;zoom={{ zoom }}&amp;markers=size:small%7C{{ location }}&amp;sensor=false&amp;visual_refresh=true"
     alt="Map: {{ location }}">
