Add sightings image gallery to Sightings Locator page. (#490)

--- a/gobotany/plantshare/templates/sightings_locator.html
+++ b/gobotany/plantshare/templates/sightings_locator.html
@@ -1,4 +1,5 @@
 {% extends "gobotany/_page_free_sidebar.html" %}
+{% load gobotany_tags %}
 {% load mapping_tags %}
 
 {% block title %}Sightings Locator: PlantShare{% endblock %}
@@ -14,6 +15,20 @@
 
 {% block main_content %}
 <h1>Sightings Locator</h1>
+
+<p>Latest Sightings</p>
+<div id="species-images">
+    {% for sighting in recent_sightings %}
+        <a href="{% url 'ps-sighting' sighting.id %}"
+            {% if forloop.counter == 1 %}id="startimage"{% endif %}
+            title="{{ sighting.identification }} at {{ sighting.location|capfirst }}"
+            data-is-scientific-name="{{ sighting.identification|is_scientific_name }}">
+            <img src="{{ sighting.photos.all.0.thumb_cropped.url }}"
+                alt="Sighting photo: {{ sighting.identification }}">
+        </a>
+    {% endfor %}
+
+</div>
 
 <form id="sightings-locator">
     <h3>Show recent plant sightings for</h3>
