--- a/gobotany/static/css/site.css
+++ b/gobotany/static/css/site.css
@@ -1200,8 +1200,12 @@ body.plantshare#delete-sighting h2, body.plantshare#delete-checklist h2 { font-s
 body.plantshare#delete-sighting table, body.plantshare#delete-checklist table { margin: 18px 0; width: 100%; }
 body.plantshare#delete-sighting thead, body.plantshare#delete-checklist thead { display: none; }
 body.plantshare#delete-sighting .cancel-btn, body.plantshare#delete-checklist .cancel-btn { color: white; margin: 0 10px 0 0; width: 123px; }
+body.plantshare#locator #main { /* Smooth Div Scroll image area */ }
+body.plantshare#locator #main h1 + p { margin-bottom: 4px; }
 body.plantshare#locator #main h3 { font-family: Verdana, Geneva, "Lucida Sans Unicode", sans-serif; font-size: 12px; line-height: 24px; }
 body.plantshare#locator #main #sightings-status { display: none; /* initially hide, until updating value via JS */ float: right; line-height: 24px; }
+body.plantshare#locator #main #species-images { border: 5px solid rgba(255, 255, 255, 0.8); height: 150px; margin: 0 0 20px 0; overflow: hidden; position: relative; top: 0; width: 700px; z-index: 100; -webkit-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); -moz-box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.6); }
+body.plantshare#locator #main #species-images .scrollableArea a { border-right: 5px solid #fff; float: left; margin: 0; padding: 0; }
 body.plantshare .modal-container { position: relative; }
 body.plantshare .image-modal { background-color: white; border: 5px solid #acac90; display: none; height: 160px; left: 0px; padding: 15px; position: absolute; top: 250px; width: 420px; z-index: 10; }
 body.plantshare .image-modal img { float: left; margin: 0 20px 10px 0; max-height: 84px; max-width: 84px; }
@@ -1378,9 +1382,11 @@ body.plantshare#screen-images div.form-control { margin: 0 30px; }
 /* Begin media queries styles for PlantShare. */
 /* Portrait-orientation styles */
 @media only screen and (max-width: 400px) { body.plantshare .box, body.plantshare .profile { width: 302px; }
-  body.plantshare .content form label, body.plantshare .content form input, body.plantshare .content form textarea { width: 292px; } }
+  body.plantshare#locator #main #species-images { width: 304px; }
+  .content form label, .content form input, .content form textarea { width: 292px; } }
 /* Landscape-orientation styles */
-@media only screen and (min-width: 401px) and (max-width: 600px) { body.plantshare .box, body.plantshare .profile { width: 462px; } }
+@media only screen and (min-width: 401px) and (max-width: 600px) { body.plantshare .box, body.plantshare .profile { width: 462px; }
+  body.plantshare#locator #main #species-images { width: 462px; } }
 /* These styles are common to both smartphone widths */
 @media only screen and (max-width: 600px) { body.plantshare #main .box { padding: 0; }
   body.plantshare #main .box > * { padding-left: 16px; padding-right: 16px; }
