Shorten introductory text for posting new sightings. (#535)

--- a/gobotany/plantshare/templates/new_sighting.html
+++ b/gobotany/plantshare/templates/new_sighting.html
@@ -15,12 +15,10 @@
 <h1>Post a Sighting</h1>
 
 <div>
-    <p><strong>Spotted a plant and want to share it with others? Here's where
+    <p><strong>Seen a plant and want to share it with others? Here's where
         to start!</strong></p>
-    <p><em>Rare plant sightings will not be made visible to others.</em>
-        However, we welcome you to post such sightings.
-        We will keep them confidential and use the information for our
-        scientific studies.</p>
+    <p><em>Rare plant sightings will be kept confidential,</em>
+        but we welcome you to post them.</p>
 </div>
 
 <div class="modal-container">
